--- a/index.html
+++ b/index.html
@@ -71,8 +71,7 @@
 
         <section class="card">
             <h3>Recent Activity</h3>
-            <ul id="request-log">
-                <li class="empty">Waiting for proxy traffic...</li>
+            <code>Waiting for proxy traffic...</code>
             </ul>
         </section>
     </main>
