--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
 
         <section class="card">
             <h3>Recent Activity</h3>
-            <code>Waiting for proxy traffic...</code>
+            <code>[PaternMal] [Dashboard] Waiting for proxy traffic...</code>
+            <code>[PaternMal] [Dashboard] Wait...</code>
             </ul>
         </section>
     </main>
